fixin' stuff up for releases

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,73 @@
 
 # rspec failure tracking
 .rspec_status
+
+# # generic stuff
+# .env
+# *.gem
+# *.rbc
+# log/*.log
+# /.config
+# /InstalledFiles
+# /pkg/
+# /tmp/
+
+# # testy stuff
+# .rspec
+# *.orig
+# /coverage/
+# /coverage/
+# /db/*.sqlite3
+# /db/*.sqlite3-[0-9]*
+# /db/*.sqlite3-journal
+# /public/system
+# /spec/examples.txt
+# /spec/reports/
+# /spec/tmp
+# /test/tmp/
+# /test/version_tmp/
+# capybara-*.html
+# pickle-email-*.html
+# rerun.txt
+# test/dummy/db/*.sqlite3
+# test/dummy/db/*.sqlite3-journal
+# test/dummy/log/*.log
+# test/dummy/node_modules/
+# test/dummy/storage/
+# test/dummy/tmp/
+# test/dummy/yarn-error.log
+
+# # debuggy stuff
+# .byebug_history
+
+# ## doccy stuff
+# /.yardoc/
+# /_yardoc/
+# /doc/
+# /rdoc/
+
+# ## bundly stuff
+# /.bundle/
+# /vendor/bundle
+# /lib/bundler/man/
+
+# # "for a library or gem, you might want to ignore these files since the code is
+# # intended to run in multiple environments"
+# Gemfile.lock
+# .ruby-version
+# .ruby-gemset
+
+# # rvmmy stuff
+# .rvmrc
+
+# # editory stuff
+# .idea
+# .vscode
+# *.rdb
+
+# # systemy stuff
+# *.swm
+# *.swn
+# *.swo
+# *.swp
+# *.DS_Store
