backwards compat for handling of pos/kw args between ruby 2 and 3

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,6 +29,7 @@ Layout/FirstArrayElementIndentation:
 # Metrics
 
 Metrics/AbcSize:
+  Max: 20
   CountRepeatedAttributes: false
   Exclude:
     - 'spec/**/*_spec.rb'
@@ -65,10 +66,13 @@ Metrics/ModuleLength:
   Exclude:
     - 'spec/**/*_spec.rb'
 
+Metrics/ParameterLists:
+  CountKeywordArgs: false
+
 # Rspec
 
 RSpec/ExampleLength:
-  Max: 30
+  Max: 40
 
 RSpec/MessageSpies:
   Enabled: false
